fix: ios does not support gap property

--- a/assets/index.css
+++ b/assets/index.css
@@ -47,6 +47,8 @@ body {
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
+    grid-gap: 1rem;
+    padding: 4rem;
     align-items: center;
     height: 100%;
     width: 100%;
@@ -251,6 +253,7 @@ body {
     margin-bottom: 2rem;
     display: flex;
     gap: .6rem;
+    grid-gap: .6rem;
 }
 
 .ingredients-section__ingredients picture:first-child {
@@ -288,6 +291,7 @@ body {
     display: flex;
     align-items: center;
     gap: 1.8rem;
+    grid-gap: 1.8rem;
     margin-bottom: 1.5rem;
 }
 
@@ -309,6 +313,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 6rem;
+    grid-gap: 6rem;
     margin-top: 6.5rem;
     flex-direction: column;
 }
@@ -337,6 +342,7 @@ body {
     text-align: center;
     display: flex;
     gap: 2rem;
+    grid-gap: 2rem;
     flex-direction: column;
     width: 100%;
 }
@@ -419,6 +425,7 @@ body {
     display: flex;
     align-items: center;
     gap: 2rem;
+    grid-gap: 2rem;
 }
 
 .footer__divider div:last-child {
@@ -431,6 +438,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    grid-gap: 1.5rem;
     margin-bottom: 2.5rem;
 }
 
@@ -438,12 +446,14 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    grid-gap: 1.5rem;
 }
 
 .footer__links-item {
     display: flex;
     align-items: center;
     gap: 1rem;
+    grid-gap: 1rem;
 }
 
 .footer__links-item a {
@@ -487,6 +497,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    grid-gap: 1rem;
     font-size: 1.8rem;
     font-family: 'Telegraf';
     font-weight: 500;
@@ -567,6 +578,7 @@ body {
     .footer__links {
         flex-direction: row;
         gap: 4rem;
+        grid-gap: 4rem;
     }
     .footer__branding img {
         width: 80px;
